--- a/Dashboard.html
+++ b/Dashboard.html
@@ -11,19 +11,19 @@
 
 <body>
     <div id="mainweb">
-        <a class="main-option-link" href="#" target="_blank">
+        <a class="main-option-link" href="#">
             <div class="main-option">Premiere Pro</div>
         </a>
 
-        <a class="main-option-link" href="#" target="_blank">
+        <a class="main-option-link" href="#">
             <div class="main-option">After Effects</div>
         </a>
 
-        <a class="main-option-link" href="#" target="_blank">
+        <a class="main-option-link" href="#">
             <div class="main-option">PhotoShop</div>
         </a>
 
-        <a class="main-option-link" href="#" target="_blank">
+        <a class="main-option-link" href="#">
             <div class="main-option">Adobe Illustrator</div>
         </a>
     </div>
