update page premiere

--- a/ProjectMain/Premiere/premiere.html
+++ b/ProjectMain/Premiere/premiere.html
@@ -55,7 +55,7 @@
 
                 <input type="text" placeholder="Enter your name">
                 <input type="email" placeholder="Enter your email">
-                <i class="far fa-paper-plane"></i>
+                <i class="fas fa-paper-plane"></i>
                 <textarea name="textemail" id="" cols="80" rows="5"></textarea>
 
 
