--- a/Dashboard.html
+++ b/Dashboard.html
@@ -12,23 +12,28 @@
 
 <body>
     <div id="mainweb">
-        <a class="main-option-link" href="#" target="_blank">
+        <a class="main-option-link" href="./ProjectMain/tempPage/TempPage.html" target="_blank">
             <div class="main-option">Premiere Pro</div>
         </a>
 
-        <a class="main-option-link" href="#" target="_blank">
+        <a class="main-option-link" href="./ProjectMain/tempPage/TempPage.html" target="_blank">
             <div class="main-option">After Effects</div>
         </a>
 
-        <a class="main-option-link" href="#" target="_blank">
+        <a class="main-option-link" href="./ProjectMain/tempPage/TempPage.html" target="_blank">
             <div class="main-option">PhotoShop</div>
         </a>
 
-        <a class="main-option-link" href="#" target="_blank">
+        <a class="main-option-link" href="./ProjectMain/tempPage/TempPage.html" target="_blank">
             <div class="main-option">Adobe Illustrator</div>
         </a>
     </div>
-    <link rel="stylesheet" href="./Dashboard.css">
+    
+    <!-- ------- CSS ------- -->
+    <link rel="stylesheet" href="./DashBoard.css">
+
+    <!-- ---------script--------- -->
+    <script src="./js/DashBoard.js"></script>
 </body>
 
 </html>
