--- a/ProjectMain/tempPage/TempPage.html
+++ b/ProjectMain/tempPage/TempPage.html
@@ -18,7 +18,7 @@
                     <option class="options">Top hữu ích</option>
                     <option class="options">Top đóng góp</option>
                 </select>
-                <input type="text" placeholder="&ensp;Tìm kiếm...">
+                <input type="text" placeholder="Tìm kiếm...">
                 <i class="fas fa-search"></i>
             </div>
 
@@ -32,8 +32,12 @@
             </div>
         </div>
     </div>
+    
+    <!-- ------- CSS ------- -->
+    <link rel="stylesheet" href="./TempPage.css">
 
-    <link rel="stylesheet" href="./tempPage.css">
+    <!-- ---------script--------- -->
+    <script src="../../js/TempPage.js"></script>
 </body>
 
 </html>
