--- a/Dashboard.html
+++ b/Dashboard.html
@@ -12,20 +12,20 @@
 
 <body>
     <div id="mainweb">
-        <a class="main-option-link premiere-pro" href="./ProjectMain/tempPage/TempPage.html" target="_blank">
-            <div class="main-option animate1">Premiere Pro</div>
+        <a class="main-option-link premiere-pro"  href="./ProjectMain/tempPage/TempPage.html" target="_blank">
+            <div class="main-option animate1" id="pre">Premiere Pro</div>
         </a>
 
-        <a class="main-option-link after-effect" href="./ProjectMain/tempPage/TempPage.html" target="_blank">
-            <div class="main-option animate2">After Effects</div>
+        <a class="main-option-link after-effect"  href="./ProjectMain/tempPage/TempPage.html" target="_blank">
+            <div class="main-option animate2" id="aft">After Effects</div>
         </a>
 
-        <a class="main-option-link photoshop" href="./ProjectMain/tempPage/TempPage.html" target="_blank">
-            <div class="main-option animate3">PhotoShop</div>
+        <a class="main-option-link photoshop"  href="./ProjectMain/tempPage/TempPage.html" target="_blank">
+            <div class="main-option animate3" id="pho">PhotoShop</div>
         </a>
 
-        <a class="main-option-link adobe-illutrator" href="./ProjectMain/tempPage/TempPage.html" target="_blank">
-            <div class="main-option animate4">Adobe Illustrator</div>
+        <a class="main-option-link adobe-illutrator"  href="./ProjectMain/tempPage/TempPage.html" target="_blank">
+            <div class="main-option animate4" id="ill">Adobe Illustrator</div>
         </a>
     </div>
     
@@ -33,8 +33,9 @@
     <link rel="stylesheet" href="./DashBoard.css">
 
     <!-- ---------script--------- -->
-    <script src="./js/DashBoard.js"></script>
+    <script src="./js/function.js"></script>
     <script src="./js/TempPage.js"></script>
+    
 </body>
 
 </html> 
