--- a/ProjectMain/tempPage/TempPage.html
+++ b/ProjectMain/tempPage/TempPage.html
@@ -33,8 +33,7 @@
     <link rel="stylesheet" href="./TempPage.css">
 
     <!-- ---------script--------- -->
-    
-    <script src="../../js/function.js"></script>
+    <script src="../../js/callAPI.js"></script>
     <script src="../../js/TempPage.js"></script>
 
 </body>
