--- a/Dashboard.html
+++ b/Dashboard.html
@@ -13,19 +13,19 @@
 <body>
     <div id="mainweb">
         <a class="main-option-link premiere-pro"  href="./ProjectMain/tempPage/TempPage.html" target="_blank">
-            <div class="main-option animate1" id="pre">Premiere Pro</div>
+            <div class="main-option animate1" id="0">Premiere Pro</div>
         </a>
 
         <a class="main-option-link after-effect"  href="./ProjectMain/tempPage/TempPage.html" target="_blank">
-            <div class="main-option animate2" id="aft">After Effects</div>
+            <div class="main-option animate2" id="1">After Effects</div>
         </a>
 
         <a class="main-option-link photoshop"  href="./ProjectMain/tempPage/TempPage.html" target="_blank">
-            <div class="main-option animate3" id="pho">PhotoShop</div>
+            <div class="main-option animate3" id="2">PhotoShop</div>
         </a>
 
         <a class="main-option-link adobe-illutrator"  href="./ProjectMain/tempPage/TempPage.html" target="_blank">
-            <div class="main-option animate4" id="ill">Adobe Illustrator</div>
+            <div class="main-option animate4" id="3">Adobe Illustrator</div>
         </a>
     </div>
     
@@ -33,8 +33,8 @@
     <link rel="stylesheet" href="./DashBoard.css">
 
     <!-- ---------script--------- -->
-    <script src="./js/function.js"></script>
-    <script src="./js/TempPage.js"></script>
+    <script src="./js/callAPI.js"></script>
+    <script src="./js/DashBoard.js"></script>
     
 </body>
 
