--- a/Dashboard.html
+++ b/Dashboard.html
@@ -1,41 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
     <title>Cùng chia sẻ kiến thức!</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="mainweb">
-        <a class="main-option-link premiere-pro"  href="./ProjectMain/tempPage/TempPage.html" target="_blank">
-            <div class="main-option animate1" id="pre">Premiere Pro</div>
-        </a>
+      <a
+        class="main-option-link premiere-pro"
+        href="./ProjectMain/tempPage/TempPage.html"
+        target="_blank"
+      >
+        <div class="main-option animate1" id="0">Premiere Pro</div>
+      </a>
 
-        <a class="main-option-link after-effect"  href="./ProjectMain/tempPage/TempPage.html" target="_blank">
-            <div class="main-option animate2" id="aft">After Effects</div>
-        </a>
+      <a
+        class="main-option-link after-effect"
+        href="./ProjectMain/tempPage/TempPage.html"
+        target="_blank"
+      >
+        <div class="main-option animate2" id="1">After Effects</div>
+      </a>
 
-        <a class="main-option-link photoshop"  href="./ProjectMain/tempPage/TempPage.html" target="_blank">
-            <div class="main-option animate3" id="pho">PhotoShop</div>
-        </a>
+      <a
+        class="main-option-link photoshop"
+        href="./ProjectMain/tempPage/TempPage.html"
+        target="_blank"
+      >
+        <div class="main-option animate3" id="2">PhotoShop</div>
+      </a>
 
-        <a class="main-option-link adobe-illutrator"  href="./ProjectMain/tempPage/TempPage.html" target="_blank">
-            <div class="main-option animate4" id="ill">Adobe Illustrator</div>
-        </a>
+      <a
+        class="main-option-link adobe-illutrator"
+        href="./ProjectMain/tempPage/TempPage.html"
+        target="_blank"
+      >
+        <div class="main-option animate4" id="3">Adobe Illustrator</div>
+      </a>
     </div>
-    
+
     <!-- ------- CSS ------- -->
-    <link rel="stylesheet" href="./DashBoard.css">
+    <link rel="stylesheet" href="./DashBoard.css" />
 
     <!-- ---------script--------- -->
-    <script src="./js/function.js"></script>
-    <script src="./js/TempPage.js"></script>
-    
-</body>
-
-</html> 
+    <script src="./js/DashBoard.js"></script>
+    <!-- <script src="./js/function.js"></script> -->
+    <!-- <script src="./js/TempPage.js"></script> -->
+  </body>
+</html>
