--- a/ProjectMain/tempPage/TempPage.html
+++ b/ProjectMain/tempPage/TempPage.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
     <title>Trang trung gian</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="all">
-        <div class="container">
-            <div class="nav">
-                <select class="select">
-                    <option class="options" value="0">Tất cả bài viết</option>
-                    <option class="options" value="1">Top views</option>
-                    <option class="options" value="2">Top hữu ích</option>
-                    <option class="options" value="3">Top đóng góp</option>
-                </select>
-                <input type="text" placeholder="Tìm kiếm...">
-                <i class="fas fa-search"></i>
-            </div>
-
-            <div class="component">
-                <div class="component-child"></div>
-            </div>
+      <div class="container">
+        <div class="nav">
+          <select class="select">
+            <option class="options" value="0">Tất cả bài viết</option>
+            <option class="options" value="1">Top views</option>
+            <option class="options" value="2">Top hữu ích</option>
+            <option class="options" value="3">Top đóng góp</option>
+          </select>
+          <input type="text" placeholder="Tìm kiếm..." />
+          <i class="fas fa-search"></i>
         </div>
+
+        <div class="component">
+          <div class="component-child"></div>
+        </div>
+      </div>
     </div>
 
     <!-- ------- CSS ------- -->
-    <link rel="stylesheet" href="./TempPage.css">
+    <link rel="stylesheet" href="./TempPage.css" />
 
     <!-- ---------script--------- -->
-    
-    <script src="../../js/function.js"></script>
+
     <script src="../../js/TempPage.js"></script>
-
-</body>
-
+  </body>
 </html>
