--- a/Dashboard.html
+++ b/Dashboard.html
@@ -22,37 +22,44 @@
 
   <body>
     <div id="mainweb">
-      <a
-        class="main-option-link premiere-pro"
-        href="./ProjectMain/tempPage/TempPage.html"
-        target="_blank"
-      >
-        <div class="main-option animate1" id="0">Premiere Pro</div>
-      </a>
+      <div class="main-option animate1" id="0">
+        <a
+          class="main-option-link premiere-pro"
+          href="./ProjectMain/tempPage/TempPage.html"
+          target="_blank"
+        >
+          Premiere Pro
+        </a>
+      </div>
 
-      <a
-        class="main-option-link after-effect"
-        href="./ProjectMain/tempPage/TempPage.html"
-        target="_blank"
-      >
-        <div class="main-option animate2" id="1">After Effects</div>
-      </a>
+      <div class="main-option animate2" id="1">
+        <a
+          class="main-option-link after-effect"
+          href="./ProjectMain/tempPage/TempPage.html"
+          target="_blank"
+        >
+          After Effects
+        </a>
+      </div>
 
-      <a
-        class="main-option-link photoshop"
-        href="./ProjectMain/tempPage/TempPage.html"
-        target="_blank"
-      >
-        <div class="main-option animate3" id="2">PhotoShop</div>
-      </a>
+      <div class="main-option animate3" id="2">
+        <a
+          class="main-option-link photoshop"
+          href="./ProjectMain/tempPage/TempPage.html"
+          target="_blank"
+          >PhotoShop
+        </a>
+      </div>
 
-      <a
-        class="main-option-link adobe-illutrator"
-        href="./ProjectMain/tempPage/TempPage.html"
-        target="_blank"
-      >
-        <div class="main-option animate4" id="3">Adobe Illustrator</div>
-      </a>
+      <div class="main-option animate4" id="3">
+        <a
+          class="main-option-link adobe-illutrator"
+          href="./ProjectMain/tempPage/TempPage.html"
+          target="_blank"
+        >
+          Adobe Illustrator
+        </a>
+      </div>
     </div>
 
     <!-- ---------script--------- -->
