--- a/public/ProjectMain/ContentPage/ContentPage.html
+++ b/public/ProjectMain/ContentPage/ContentPage.html
@@ -42,7 +42,7 @@
         <div class="right-side">
             <div class="information">
                 <div class="list-content">
-                    <a href="../../Dashboard.html" target="_blank">Home</a> > <a class="name-content"
+                    <a href="../../index.html" target="_blank">Home</a> > <a class="name-content"
                         href="../tempPage/TempPage.html"></a>
                 </div>
                 <p class="date-public"></p>
