--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <!-- ------- CSS ------- -->
-  <link rel="stylesheet" href="./DashBoard.css" />
+  <link rel="stylesheet" href="./Dashboard.css" />
 
   <title>Cùng chia sẻ kiến thức!</title>
 </head>
