--- a/public/ProjectMain/tempPage/TempPage.html
+++ b/public/ProjectMain/tempPage/TempPage.html
@@ -30,7 +30,7 @@
     </div>
 
     <!-- ------- CSS ------- -->
-    <link rel="stylesheet" href="./TempPage.css">
+    <link rel="stylesheet" href="./tempPage.css">
 
     <!-- ---------script--------- -->
     <script src="../../js/callAPI.js"></script>
